# GerenciadorProjetosPersonas

./: README.md  config.yaml  pyproject.toml  requirements.txt
.clinerules/: persona_system_rules.mdc
.windsurf/: rules.mdc
docs/: API.md  CONTEXTO_PERSONAS.md  FLUXOS.md  IDEIAS_MELHORIA_WINDSURF.md  INSTALACAO.md  ROADMAP_TAREFAS.md  USO.md
examples/: README.md
examples/simple_project/: config.json  tasks.json
gerenciador_projetos_personas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
prompts/: ai-router.md  cursor-memory.md  main-ai-system.md  quick-start.md  readme.md  regraprojetolaunchpad.md  router-integration.md
prompts/contexts/: template-context.md
prompts/personas/: 01-ana-blockchain-architect.md  02-rafael-frontend-expert.md  03-lucia-backend-engineer.md  04-pedro-security-expert.md  05-carla-product-manager.md  06-gustavo-defi-economist.md  07-marina-legal-compliance.md  08-luiz-devops-expert.md  09-miguel-data-scientist.md  10-julia-qa-engineer.md  11-felipe-automation-hacker.md  alex_web3_security.md
prompts/rule-extensions/: force-update-checker.md
scripts/: adapter_utils.py  ai_helpers.py  backup_system.py  cli.py  config_loader.py  diagnostics.py  documentation_finalizer.py  generate_report.py  generate_report.sh  git_integration.py  monitor.py  monitor.sh  notify.py  project_status.py  release_publisher.py  rotate_personas.py  rotate_personas.sh  task_manager.py  test_automation.py  update_report.py  update_report.sh  usability_testing.py  windsurf_adapter.py
templates/: checklist.md
(+3 files in other folders)
